<resources>
    <string name="app_name">EHR</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_patient">New Patient?</string>
    <string name="register_here">Register here</string>
    <string-array name="user_type_options">
        <item>Select User</item>
        <item>Admin</item>
        <item>Insurance Company</item>
        <item>Laboratory</item>
        <item>Patient</item>
        <item>Pharmacy</item>
        <item>Provider</item>
    </string-array>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_insurance">Insurance</string>
    <string name="title_activity_laboratory">Laboratory</string>
    <string name="title_activity_patient">Patient</string>
    <string name="title_activity_pharmacy">Pharmacy</string>
    <string name="title_activity_provider">Provider</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="insurance_menu_profile">Profile</string>
    <string name="insurance_menu_coverage">Coverage</string>
    <string name="insurance_menu_subscribers">Subscribers</string>
    <string name="insurance_menu_logout">Logout</string>
    <string name="insurance_email_label">Email</string>
    <string name="insurance_name_label">Name</string>
    <string name="insurance_contact_label">Contact</string>
    <string name="insurance_address1_label">Address1</string>
    <string name="insurance_address2_label">Address2</string>
    <string name="insurance_state_label">State</string>
    <string name="insurance_city_label">City</string>
    <string name="insurance_zip_label">ZIP</string>
    <string name="insurance_update">Update</string>
    <string name="insurance_password_label">Password</string>
    <string name="insurance_claim_name">Name:</string>
    <string name="insurance_claim_charges">Charges:</string>
    <string name="insurance_claim_patientPayment">Patient Payment:</string>
    <string name="insurance_subscriber_expiry">Expiry:</string>
    <string name="insurance_subscriber_name">Name:</string>
    <string name="insurance_claim_pay">Pay</string>
    <string name="insurance_coverage_charges">Charges:</string>
    <string name="insurance_coverage_name">Name:</string>
    <string name="insurance_coverage_patientPayment">Patient Payment:</string>
    <string name="insurance_coverage_insuranceCoverage">Insurance Coverage:</string>
    <string name="insurance_menu_home">Home</string>
    <string name="laboratory_menu_profile">Profile</string>
    <string name="laboratory_menu_tests">Tests</string>
    <string name="laboratory_menu_logout">Logout</string>
    <string name="laboratory_profile_email">Email</string>
    <string name="laboratory_profile_name">Name</string>
    <string name="laboratory_profile_contact">Contact</string>
    <string name="laboratory_profile_address1">Address1</string>
    <string name="laboratory_profile_address2">Address2</string>
    <string name="laboratory_profile_state">State</string>
    <string name="laboratory_profile_city">City</string>
    <string name="laboratory_profile_zip">ZIP</string>
    <string name="laboratory_profile_update">Update</string>
    <string name="laboratory_profile_password">Password</string>
    <string name="insurance_subscriber_view">View</string>
    <string name="insurance_subscriber_dialog_title">Subscriber Details</string>
    <string name="insurance_subscriber_dialog_name">Name:</string>
    <string name="insurance_subscriber_dialog_gender">Gender:</string>
    <string name="insurance_subscriber_dialog_dob">DOB:</string>
    <string name="insurance_subscriber_dialog_emailId">Email:</string>
    <string name="insurance_subscriber_dialog_contact">Contact:</string>
    <string name="insurance_subscriber_dialog_address1">Address1:</string>
    <string name="insurance_subscriber_dialog_address2">Address2:</string>
    <string name="insurance_subscriber_dialog_city">City:</string>
    <string name="insurance_subscriber_dialog_state">State:</string>
    <string name="insurance_subscriber_dialog_zip">ZIP:</string>
    <string name="insurance_subscriber_dialog_expiry">Expiry:</string>
    <string name="insurance_subscriber_dialog_close">Close</string>
    <string name="insurance_coverage_dialog_title">Coverage Details</string>
    <string name="insurance_coverage_dialog_name">Name:</string>
    <string name="insurance_coverage_dialog_charges">Charges:</string>
    <string name="insurance_coverage_dialog_patient_payment">Patient Payment:</string>
    <string name="insurance_coverage_dialog_insurance_coverage">Insurance Coverage:</string>
    <string name="insurance_coverage_dialog_status">Status:</string>
    <string name="title_activity_sb_admin_addfacility">sb_admin_addfacility</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="insurance_names">
    </string-array>
    <string-array name="gender_options">
        <item>Select Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>