<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:text="@string/sign_in"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/email"
        android:textColorHint="@color/dark_gray"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/forgot_password"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/userType"
        style="@style/SpinnerTheme"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/icon_arrow_down"
        android:drawablePadding="8dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="360dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userType" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_primary_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text" />

    <TextView
        android:id="@+id/new_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:text="@string/new_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:text="@string/register_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/new_patient"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>