<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_title"
                    android:gravity="center"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_gender"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_dob"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_emailId"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_contact"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_address1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_address1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_address2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_address2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_city"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_state"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_zip"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_zip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="6dp"
                    android:text="@string/insurance_subscriber_dialog_expiry"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/insurance_subscriber_dialog_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingEnd="0dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/insurance_subscriber_dialog_close_button"
                    android:layout_width="wrap_content"
                    android:textAllCaps="false"
                    android:layout_height="32dp"
                    android:background="@drawable/custom_primary_button"
                    android:text="@string/insurance_subscriber_dialog_close"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


            <!-- Empty TextView to add artificial padding after button for scroll -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/insurance_profile_update_button2"
                    android:layout_width="360dp"
                    android:layout_height="48dp"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>