<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="6dp"
                android:text="@string/insurance_coverage_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/insurance_coverage_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="6dp"
                android:text="@string/insurance_coverage_insuranceCoverage"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/insurance_coverage_insuranceCoverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            tools:ignore="UselessParent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/insurance_coverage_view_button"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:layout_height="32dp"
                android:background="@drawable/custom_primary_button"
                android:text="@string/insurance_subscriber_view"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_gray"/>

    </LinearLayout>

</RelativeLayout>